--- a/PolimorfismEx1/PolimorfismEx1.csproj
+++ b/PolimorfismEx1/PolimorfismEx1.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Employee.cs" />
+    <Compile Include="Entities\OutsourcedEmployee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
